updates to readme

--- a/README.textile
+++ b/README.textile
@@ -1,38 +1,30 @@
 h1. Welcome to insta4j
 
-The java client api for Instapaper Full and Simple api's
-The Developer API allows third-party applications to add URLs to Instapaper & more.
-For more information visit instapaper documenation
-"Simple Developer API":http://www.instapaper.com/api/simple:
-"Full Developer API":http://www.instapaper.com/api/simple:
-
+The java client api for Instapaper "Full":http://www.instapaper.com/api/full and "Simple":http://www.instapaper.com/api/simple
+API which allows third-party applications to add URLs to Instapaper.
 
 h2. Getting started
 
-1. Building the jars, just run:
-bc. mvn install
-2. After artifacts have been built you can included insta4j jars as dependencies
+Fork the project source code on "Github":https://github.com/dzontak/insta4j
 
-bc. Full instapaper api client
+bc. git clone git@github.com:dzontak/insta4j.git
+
+1. Build the client with maven
+mvn install
+
+2. Add insta4j-client and insta4j-simpleclient as dependencies to your pom.
+
 <dependency>
   <groupId>com.idtmatter</groupId>
   <artifactId>insta4j-client</artifactId>
   <version>1.0.0</version>
 </dependency>
 
-bc. Simple instapaper api client
 <dependency>
   <groupId>com.idtmatter</groupId>
   <artifactId>insta4j-simpleclient</artifactId>
   <version>1.0.0</version>
 </dependency>
-
-
-h2. Get the source
-
-Fork the project source code on "Github":https://github.com/dzontak/insta4j:
-
-bc. git clone git@github.com:dzontak/insta4j.git
 
 h2. Reporting bugs
 
@@ -40,4 +32,4 @@ Please report bugs on "Github":https://github.com/dzontak/insta4j/issues
 
 h2. Licence
 
-Play framework is distributed under "Apache 2 licence":http://www.apache.org/licenses/LICENSE-2.0.html.
+Play framework is distributed under "Apache 2 licence":http://www.apache.org/licenses/LICENSE-2.0.html
