--- a/README.textile
+++ b/README.textile
@@ -10,17 +10,17 @@ Fork the project source code on "Github":https://github.com/dzontak/insta4j
 bc. git clone git@github.com:dzontak/insta4j.git
 
 1. Build the client with maven
-mvn install
+bc. mvn install
 
 2. Add insta4j-client and insta4j-simpleclient as dependencies to your pom.
 
-<dependency>
+bc. <dependency>
   <groupId>com.idtmatter</groupId>
   <artifactId>insta4j-client</artifactId>
   <version>1.0.0</version>
 </dependency>
 
-<dependency>
+bc.<dependency>
   <groupId>com.idtmatter</groupId>
   <artifactId>insta4j-simpleclient</artifactId>
   <version>1.0.0</version>
