--- a/README.textile
+++ b/README.textile
@@ -1,19 +1,18 @@
 h1. Welcome to insta4j
 
-The java client api for Instapaper "Full":http://www.instapaper.com/api/full and "Simple":http://www.instapaper.com/api/simple
-API which allows third-party applications to add URLs to Instapaper.
+The java client api for Instapaper "Full":http://www.instapaper.com/api/full and "Simple":http://www.instapaper.com/api/simple API which allows third-party applications to add URLs to Instapaper.
 
 h2. Getting sources
 
-Fork the project source code on "Github":https://github.com/dzontak/insta4j
+1. Fork the project source code on "Github":https://github.com/dzontak/insta4j
 
 bc. git clone git@github.com:dzontak/insta4j.git
 
-1. Build the client with maven
+2. Build the client with maven
 
 bc. mvn install
 
-2. Add insta4j-client and insta4j-simpleclient as dependencies to your pom.
+3. Add insta4j-client and insta4j-simpleclient as dependencies to your pom
 
 bc. <dependency>
   <groupId>com.idtmatter</groupId>
@@ -35,8 +34,7 @@ Create a file insta4j.properties with the following properties substituting your
 bc. oauth.consumer.key=4bOs6ZpYosPYwZnUcSaWa9TH4vAHQ1SRzKaic422Tk4Ax6GWQv
 bc. oauth.consumer.secret=nk5LqpiquzhQoHoAruTZ3tempCU1s4pttR83xvBIDFoMRpWhMMX
 
-* The api is very easy to use and the best place to start is by looking at the unit tests.
-* There is an intergration test for each of the methods provided by the instapaper apis
+* The api is easy to use and the best place to start is by looking at the unit tests there is an intergration test for each of the methods provided by the instapaper apis
 
 h2. Reporting bugs
 
@@ -44,4 +42,4 @@ Please report bugs on "Github":https://github.com/dzontak/insta4j/issues
 
 h2. Licence
 
-Play framework is distributed under "Apache 2 licence":http://www.apache.org/licenses/LICENSE-2.0.html
+Distributed under "Apache 2 licence":http://www.apache.org/licenses/LICENSE-2.0.html
